[metadata]
name = matplotlib-backend-kitty
version = 2.1.1
description = show matplotlib plots directly in your kitty terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jktr/matplotlib-backend-kitty
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Framework :: Matplotlib
    Topic :: Terminals

[options]
packages = matplotlib-backend-kitty
install_requires = 
    matplotlib
